samples/_failures_safe/1761321542_0505e5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_631b709c.c: In function ‘main’:
./samples/SAFE/__tmp_631b709c.c:123:30: error: missing terminating " character
  123 |             cols2 = read_int("Enter number of columns for
      |                              ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_631b709c.c:123:13: error: expected expression at end of input
  123 |             cols2 = read_int("Enter number of columns for
      |             ^~~~~
./samples/SAFE/__tmp_631b709c.c:123:21: error: too few arguments to function ‘read_int’
  123 |             cols2 = read_int("Enter number of columns for
      |                     ^~~~~~~~
./samples/SAFE/__tmp_631b709c.c:10:5: note: declared here
   10 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_631b709c.c:123:13: error: expected declaration or statement at end of input
  123 |             cols2 = read_int("Enter number of columns for
      |             ^~~~~
./samples/SAFE/__tmp_631b709c.c:123:13: error: expected declaration or statement at end of input
